# GltfViewer

./: CMakeLists.txt  TODO.md  build.sh  imgui.ini  main.cpp  normal.gs  normal.vert  pbr_shader_simplified.frag  shader.frag  shader.h  shader.vert
include/glad/: glad.c  glad.h
resources/models/: 14.gltf  16.gltf  17.gltf  18.gltf  cubenormal.gltf  flat_plane.gltf  out.gltf  pirate_bay.gltf  simple_triangle.gltf  simplified_mesh.gltf  temp.gltf  untitled.gltf
resources/models/test1/: with_bin.gltf
resources/models/test10/: 10.gltf
resources/models/test11/: 11.gltf
resources/models/test13/: 13.gltf
resources/models/test3/: 3.gltf  triangle_material.gltf
shaders/: framebuffer_screen.fs  pbr_shader_simplified.frag  shader.vert
src/: CMakeCache.txt  CMakeLists.txt  Makefile  arcball.cpp  arcball.h  camera.cpp  camera.h  cmake_install.cmake  custom_geometry.hpp  framebuffer.hpp  gltfscene.cpp  gltfscene.h  glview.cc  input.h  main.cpp  mesh.cpp  mesh.hpp  shader.h  shape.cpp  shape.hpp  shapes.hpp  texture.cpp  texture.hpp  utils.hpp  window.cpp  window.h
src/src/: Makefile  MinimalOpenGL  cmake_install.cmake
